manifests/ingress/devshelf-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devshelf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devshelf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devshelf-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devshelf-backend
                port:
                  number: 80
